kubernetes/apps/gateway/lan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-lan
  namespace: envoy-gateway-system
  annotations:
    metallb.universe.tf/address-pool: network-infra
    metallb.universe.tf/loadBalancerIPs: 192.168.1.3
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: tailscale-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: tailscale
  ports:
    - name: https
      port: 443
      targetPort: 10443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 10080
      protocol: TCP
